--- a/Register.html
+++ b/Register.html
@@ -234,7 +234,7 @@
     </div>
     <!--Fin de modal para login-->
 
-    <script src="light-switch-bootstrap/switch.js"></script>
+    <script src="switch.js"></script>
 </body>
 
 </html>
