--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       
   </script>
 
-<script src="light-switch-bootstrap/switch.js"></script>
+<script src="switch.js"></script>
 
   </body>
 </html>
