--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
               <li class="nav-item">
                 <div class="form-check form-switch">
-                  <label class="form-check-label" for="lightSwitch"> Modo Noche </label>
-                  <input class="form-check-input" type="checkbox" id="lightSwitch" />
+                  <label class="form-check-label" for="Interruptor de contraste"> Modo Noche </label>
+                  <input class="form-check-input" type="checkbox" id="Interruptor de contraste" />
                 </div>
               </li>
 
@@ -85,9 +85,9 @@
                 class="form-control me-2"
                 type="search"
                 placeholder="Buscar"
-                aria-label="Search"
+                aria-label="Botón de buscar"
               />
-              <button class="btn btn-outline-success" type="submit">
+              <button class="btn btn-outline-success" type="submit" aria-labelledby="Botón de buscar">
                 <i class="bi bi-search"></i>
               </button>
             </form>
@@ -95,7 +95,7 @@
         </div>
       </nav>
 
-      <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+      <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="Páginas anteriores">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Inicio</a></li>
           <li class="breadcrumb-item active" aria-current="page" id="BC">Entradas</li>
@@ -190,7 +190,7 @@
         <fieldset>
           <legend> <b>¡Visítanos en Redes Sociales!</b></legend> 
           <br><div id="Spam" aria-label="Redes sociales">
-          <i class="bi bi-youtube" aria-label="Youtube"></i><i class="bi bi-instagram" aria-label="Instagram"></i><i class="bi bi-twitch" aria-label="Tuich"></i><i class="bi bi-twitter" aria-label="Tuiter"></i><i class="bi bi-facebook" aria-label="Feisbuk"></i>
+          <i class="bi bi-youtube" aria-labelledby="Youtube"></i><i class="bi bi-instagram" aria-labelledby="Instagram"></i><i class="bi bi-twitch" aria-labelledby="Tuich"></i><i class="bi bi-twitter" aria-labelledby="Tuiter"></i><i class="bi bi-facebook" aria-labelledby="Feisbuk"></i>
         </div>
         </fieldset>
 
