--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <nav class="navbar navbar-expand-lg bg-body-tertiary" id="Menu">
         <div class="container-fluid">
-          <a id="Login" class="btn navbar-brand" data-bs-toggle="modal" data-bs-target="#ModalYouKnow" aria-label="Formulario de iniciar sesión">
+          <a id="Login" class="btn navbar-brand" data-bs-toggle="modal" data-bs-target="#ModalYouKnow" aria-label="Log In">
             Login
           </a>
           <button
@@ -73,9 +73,9 @@
               </li>
 
               <li class="nav-item">
-                <div class="form-check form-switch">
+                <div class="form-check form-switch" aria-labelledby="Contraste">
                   <label class="form-check-label" for="Interruptor de contraste"> Modo Noche </label>
-                  <input class="form-check-input" type="checkbox" id="Interruptor de contraste" />
+                  <input class="form-check-input" type="checkbox" id="Interruptor de contraste" aria-labelledby="Interruptor"/>
                 </div>
               </li>
 
