--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         
         <fieldset>
           <legend> <b>¡Visítanos en Redes Sociales!</b></legend> 
-          <br><div id="Spam" aria-label="Redes sociales">
+          <br><div id="Spam" aria-labelledby="Redes sociales">
           <i class="bi bi-youtube" aria-labelledby="Youtube"></i><i class="bi bi-instagram" aria-labelledby="Instagram"></i><i class="bi bi-twitch" aria-labelledby="Tuich"></i><i class="bi bi-twitter" aria-labelledby="Tuiter"></i><i class="bi bi-facebook" aria-labelledby="Feisbuk"></i>
         </div>
         </fieldset>
