--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
               <li class="nav-item">
                 <div class="form-check form-switch" aria-labelledby="Contraste">
-                  <label class="form-check-label" for="Interruptor de contraste"> Modo Noche </label>
-                  <input class="form-check-input" type="checkbox" id="Interruptor de contraste" aria-labelledby="Interruptor"/>
+                  <label class="form-check-label" for="Interruptor"> Modo Noche </label>
+                  <input class="form-check-input" type="checkbox" id="Interruptor" aria-labelledby="Interruptor"/>
                 </div>
               </li>
 
