--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <fieldset>
           <legend> <b>¡Visítanos en Redes Sociales!</b></legend> 
           <br><div id="Spam" aria-labelledby="Redes sociales">
-          <i class="bi bi-youtube" aria-labelledby="Youtube"></i><i class="bi bi-instagram" aria-labelledby="Instagram"></i><i class="bi bi-twitch" aria-labelledby="Tuich"></i><i class="bi bi-twitter" aria-labelledby="Tuiter"></i><i class="bi bi-facebook" aria-labelledby="Feisbuk"></i>
+          <i class="bi bi-youtube" title="Youtube"></i><i class="bi bi-instagram" title="Instagram"></i><i class="bi bi-twitch" title="Tuich"></i><i class="bi bi-twitter" title="Tuiter"></i><i class="bi bi-facebook" title="Feisbuk"></i>
         </div>
         </fieldset>
 
