--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
               </li>
 
               <li class="nav-item">
-                <div class="form-check form-switch" aria-labelledby="Contraste">
+                <div class="form-check form-switch" aria-label="Contraste">
                   <label class="form-check-label" for="Interruptor"> Modo Noche </label>
-                  <input class="form-check-input" type="checkbox" id="Interruptor" aria-labelledby="Interruptor"/>
+                  <input class="form-check-input" type="checkbox" id="Interruptor" aria-label="Interruptor"/>
                 </div>
               </li>
 
@@ -87,7 +87,7 @@
                 placeholder="Buscar"
                 aria-label="Botón de buscar"
               />
-              <button class="btn btn-outline-success" type="submit" aria-labelledby="Botón de buscar">
+              <button class="btn btn-outline-success" type="submit" aria-label="Botón de buscar">
                 <i class="bi bi-search"></i>
               </button>
             </form>
@@ -189,7 +189,7 @@
         
         <fieldset>
           <legend> <b>¡Visítanos en Redes Sociales!</b></legend> 
-          <br><div id="Spam" aria-labelledby="Redes sociales">
+          <br><div id="Spam" aria-label="Redes sociales">
           <i class="bi bi-youtube" title="Youtube"></i><i class="bi bi-instagram" title="Instagram"></i><i class="bi bi-twitch" title="Tuich"></i><i class="bi bi-twitter" title="Tuiter"></i><i class="bi bi-facebook" title="Feisbuk"></i>
         </div>
         </fieldset>
