--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <source src="Resources/Images/Background.mp4" type="video/mp4">
     </video>
     <div class="content">
-      <button class="btn-close" aria-label="Close" role="navigation" id="myBtn" onclick="eliminar()"></button>
+      <button class="btn-close" aria-label="Close" id="myBtn" onclick="eliminar()"></button>
       <h2 id="h1">¡Corre con nosotros!</h2>
   </div> 
 </div>
@@ -51,7 +51,6 @@
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            role="button"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
@@ -74,9 +73,9 @@
               </li>
 
               <li class="nav-item">
-                <div class="form-check form-switch" aria-label="Contraste" role="complementary">
+                <div class="form-check form-switch" aria-label="Contraste" role="note">
                   <label class="form-check-label" for="Interruptor"> Modo Noche </label>
-                  <input class="form-check-input" type="checkbox" id="Interruptor" role="button" aria-label="Interruptor"/>
+                  <input class="form-check-input" type="checkbox" id="Interruptor" role="complementary" aria-label="Interruptor"/>
                 </div>
               </li>
 
