--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 class="form-control me-2"
                 type="search"
                 placeholder="Buscar"
-                role="button"
+                role="search"
                 aria-label="Botón de buscar"
               />
               <button class="btn btn-outline-success" type="submit" role="button" aria-label="Botón de buscar">
