--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <li class="nav-item">
                 <div class="form-check form-switch" aria-label="Contraste" role="note">
                   <label class="form-check-label" for="Interruptor"> Modo Noche </label>
-                  <input class="form-check-input" type="checkbox" id="Interruptor" role="complementary" aria-label="Interruptor"/>
+                  <input class="form-check-input" type="checkbox" id="Interruptor" role="checkbox" aria-label="Interruptor"/>
                 </div>
               </li>
 
