--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <li class="nav-item">
                 <div class="form-check form-switch" aria-label="Contraste" role="note">
                   <label class="form-check-label" for="Interruptor"> Modo Noche </label>
-                  <input class="form-check-input" type="checkbox" id="Interruptor" role="checkbox" aria-label="Interruptor"/>
+                  <input class="form-check-input" type="checkbox" id="Interruptor" aria-label="Interruptor"/>
                 </div>
               </li>
 
@@ -85,7 +85,6 @@
                 class="form-control me-2"
                 type="search"
                 placeholder="Buscar"
-                role="search"
                 aria-label="Botón de buscar"
               />
               <button class="btn btn-outline-success" type="submit" role="button" aria-label="Botón de buscar">
