--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 placeholder="Buscar"
                 aria-label="Botón de buscar"
               />
-              <button class="btn btn-outline-success" type="submit" role="button" aria-label="Botón de buscar">
+              <button class="btn btn-outline-success" type="submit" aria-label="Botón de buscar">
                 <i class="bi bi-search"></i>
               </button>
             </form>
