--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
               <img src="Resources/Images/istockphoto-658618490-170667a.jpg" class="card-img-top" alt="Ganador del torneo pasado">
               <div class="card-body">
                 <div class="stats">
-                  <p aria-label="Número de visitas que tiene la entrada"><i class="bi bi-eye"></i>567</p>
-                  <p aria-label="Número de me gustas que tiene la entrada"><i class="bi bi-emoji-heart-eyes"></i>12</p>
+                  <p role="note" aria-label="Número de visitas que tiene la entrada"><i class="bi bi-eye"></i>567</p>
+                  <p aria-label="Número de me gustas que tiene la entrada" role="note"><i class="bi bi-emoji-heart-eyes"></i>12</p>
                 </div>
                 <h5 class="card-title">Torneo Atletismo Ayamonte</h5>
                 <p class="card-text">Torneo anual del departamento de deporte de Ayamonte.</p>
-                <div aria-label="Detalles de la entrada">
-                  <p aria-label="Comentarios"><i class="bi bi-chat-right-text"></i> 26</p>
-                  <p aria-label="Hastags"><b>#Ayamonte#Torneo#Anual</b></p>
+                <div aria-label="Detalles de la entrada" role="note">
+                  <p aria-label="Comentarios" role="note"><i class="bi bi-chat-right-text"></i> 26</p>
+                  <p aria-label="Hastags" role="note"><b>#Ayamonte#Torneo#Anual</b></p>
                 </div>
               </div>
             </div>
@@ -148,14 +148,14 @@
               <img src="Resources/Images/man-g77c4acd3d_1920.jpg" class="card-img-top" alt="Ganador del torneo pasado">
               <div class="card-body">
                 <div class="stats">
-                  <p aria-label="Número de visitas que tiene la entrada"><i class="bi bi-eye"></i>12345</p>
-                  <p aria-label="Número de me gustas que tiene la entrada"><i class="bi bi-emoji-heart-eyes"></i>1123</p>
+                  <p aria-label="Número de visitas que tiene la entrada" role="note"><i class="bi bi-eye"></i>12345</p>
+                  <p aria-label="Número de me gustas que tiene la entrada" role="note"><i class="bi bi-emoji-heart-eyes"></i>1123</p>
                 </div>
                 <h5 class="card-title">Torneo Atletismo Bormujos</h5>
                 <p class="card-text">Torneo anual del departamento de deporte de Ayamonte.</p>
-                <div aria-label="Detalles de la entrada">
-                  <p class="col" aria-label="Comentarios"><i class="bi bi-chat-right-text"></i> 376</p>
-                  <p class="col" aria-label="Hastags"><b>#Bormujos#Torneo#Anual</b></p>
+                <div aria-label="Detalles de la entrada" role="note">
+                  <p class="col" aria-label="Comentarios" role="note"><i class="bi bi-chat-right-text"></i> 376</p>
+                  <p class="col" aria-label="Hastags" role="note"><b>#Bormujos#Torneo#Anual</b></p>
                 </div>
               </div>
             </div>
@@ -165,14 +165,14 @@
               <img src="Resources/Images/woman-g0b7ca8601_1920.jpg" class="card-img-top" alt="Modelo de la campaña de Nike">
               <div class="card-body">
                 <div class="stats">
-                  <p aria-label="Número de visitas que tiene la entrada"><i class="bi bi-eye"></i>23</p>
-                  <p aria-label="Número de me gustas que tiene la entrada"><i class="bi bi-emoji-heart-eyes"></i>6</p>
+                  <p aria-label="Número de visitas que tiene la entrada" role="note"><i class="bi bi-eye"></i>23</p>
+                  <p aria-label="Número de me gustas que tiene la entrada" role="note"><i class="bi bi-emoji-heart-eyes"></i>6</p>
                 </div>
                 <h5 class="card-title">Campaña publicitaria Nike Cadiz</h5>
                 <p class="card-text">Torneo publicitario patrocinado por Adidas para promocionar sus nuevas zapatillas.</p>
-                <div aria-label="Detalles de la entrada">
-                  <p class="col" aria-label="Comentarios"><i class="bi bi-chat-right-text"></i> 13</p>
-                  <p class="col" aria-label="Hastags"><b>#Nike#Patrocinador#Cádiz</b></p>
+                <div aria-label="Detalles de la entrada" role="note">
+                  <p class="col" aria-label="Comentarios" role="note"><i class="bi bi-chat-right-text"></i> 13</p>
+                  <p class="col" aria-label="Hastags" role="note"><b>#Nike#Patrocinador#Cádiz</b></p>
                 </div>
               </div>
             </div>
