--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
         
         <fieldset>
           <legend> <b>¡Visítanos en Redes Sociales!</b></legend> 
-          <br><div id="Spam" aria-label="Redes sociales">
+          <br><div id="Spam" aria-label="Redes sociales" role="note">
           <i class="bi bi-youtube" title="Youtube"></i><i class="bi bi-instagram" title="Instagram"></i><i class="bi bi-twitch" title="Tuich"></i><i class="bi bi-twitter" title="Tuiter"></i><i class="bi bi-facebook" title="Feisbuk"></i>
         </div>
         </fieldset>
 
           <fieldset id="carouselExampleCaptions" class="carousel slide" aria-label="Entradas recientes">
             <legend><b>Más entradas</b></legend>
-            <div class="carousel-indicators" aria-label="Entradas recientes">
+            <div class="carousel-indicators" aria-label="Entradas recientes" role="note">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -246,7 +246,7 @@
 
     <!--Inicio del footer-->   
     <footer class="col-12" id="Pie" aria-label="Pie de página">
-        <div class="col"><p class="Direccion" aria-label="Direccion"> Nuestra sede física se encuentra en:</p><br><p class="Direccion">C/ Sanatorio de Fuego Nº23</p></div>
+        <div class="col"><p class="Direccion" aria-label="Direccion" role="note"> Nuestra sede física se encuentra en:</p><br><p class="Direccion">C/ Sanatorio de Fuego Nº23</p></div>
         <div class="col">
           <ul class="list-group" aria-label="Puntos de interés">
           <li class="list-group-item"><a class="btn navbar-brand" href="#" data-bs-toggle="modal"
@@ -256,14 +256,14 @@
           <li class="list-group-item">Añadir nueva entrada</li>
         </ul>
       </div>
-        <div class="col"><p class="Direccion" aria-label="Etiquetas">#Deporte#Running#Atletismo#Torneos<br>#Competición#Correr#Ejercicio</p></div>
+        <div class="col"><p class="Direccion" aria-label="Etiquetas" role="note">#Deporte#Running#Atletismo#Torneos<br>#Competición#Correr#Ejercicio</p></div>
         <div class="col"><img class="img-fluid" src="Resources/Images/cc-by-nc-nd--300x104.png" alt="Derechos de autor"></div>
       </footer>
 <!--Fin del footer-->
 
 
 
-      <div class="modal" tabindex="-1" id="ModalYouKnow" aria-label="Formulario de iniciar sesión">
+      <div class="modal" tabindex="-1" id="ModalYouKnow" aria-label="Formulario de iniciar sesión" role="note">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
