--- a/Register.html
+++ b/Register.html
@@ -92,8 +92,8 @@
     <form class="row g-3 needs-validation" novalidate id="form">
         <fieldset>
         <legend><b>Registro</b></legend>
-        <div class="input-group" aria-label="Datos solicitados">
-            <span class="input-group-text" aria-label="Nombre y Apellidos">Nombre y Apellidos:</span>
+        <div class="input-group" aria-label="Datos solicitados" role="note">
+            <span class="input-group-text" aria-label="Nombre y Apellidos" role="note">Nombre y Apellidos:</span>
             <input type="text" class="form-control" aria-label="Nombre" >
             <input type="text" class="form-control" aria-label="Apellidos">
         </div>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default" aria-label="Direccion">Dirección:</span>
+            <span class="input-group-text" id="inputGroup-sizing-default" aria-label="Direccion" role="note">Dirección:</span>
             <input type="text" class="form-control"
                 aria-describedby="inputGroup-sizing-default" aria-label="Direccion">
         </div>
@@ -111,7 +111,7 @@
 
 
         <div class="input-group input-group-sm mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-sm" aria-label="Comunidad Autónoma">Comunidad Autónoma:</span>
+            <span class="input-group-text" id="inputGroup-sizing-sm" aria-label="Comunidad Autónoma" role="note">Comunidad Autónoma:</span>
             <select class="form-select" id="validationCustom04" required>
       <option selected disabled value="">Elegir</option>
       <option>Andalucía</option>
@@ -137,27 +137,27 @@
         </div>
 
         <div class="input-group input-group-sm mb-3">
-            <span class="input-group-text" aria-label="Provincia">Provincia:</span>
+            <span class="input-group-text" aria-label="Provincia" role="note">Provincia:</span>
             <input type="text" class="form-control"
                 aria-describedby="inputGroup-sizing-sm" aria-label="Provincia">
         </div>
 
         <div class="input-group input-group-sm mb-3">
-            <span class="input-group-text" aria-label="Ciudad">Ciudad:</span>
+            <span class="input-group-text" aria-label="Ciudad" role="note">Ciudad:</span>
             <input type="text" class="form-control"
                 aria-describedby="inputGroup-sizing-sm" aria-label="Ciudad">
         </div>
 
         <div class="input-group">
-            <span class="input-group-text" aria-label="Biografía breve">Biografía breve:</span>
+            <span class="input-group-text" aria-label="Biografía breve" role="note">Biografía breve:</span>
             <textarea class="form-control" aria-label="Biografía breve"></textarea>
         </div>
         <br>
         <div class="input-group">
-            <span class="input-group-text" id="basic-addon3" aria-label="Instagram">https://instagram.com/</span>
+            <span class="input-group-text" id="basic-addon3" aria-label="Instagram" role="note">https://instagram.com/</span>
             <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" aria-label="Instagram">
         </div>
-        <div class="form-text" aria-label="No es necesario indicar Instagram">No es necesario indicarlo.</div>
+        <div class="form-text" aria-label="No es necesario indicar Instagram" role="note">No es necesario indicarlo.</div>
 
         <br>
 
@@ -170,21 +170,21 @@
 <!--Fin de formulario de registro-->
 
 
-    <!--Inicio del footer-->   
-    <footer class="col-12" id="Pie" aria-label="Pie de página">
-      <div class="col"><p class="Direccion" aria-label="Direccion"> Nuestra sede física se encuentra en:</p><br><p class="Direccion">C/ Sanatorio de Fuego Nº23</p></div>
-      <div class="col">
-        <ul class="list-group" aria-label="Puntos de interés">
-        <li class="list-group-item"><a class="btn navbar-brand" href="#" data-bs-toggle="modal"
-          data-bs-target="#ModalYouKnow">Login</a></li>
-        <li class="list-group-item"><a href="Register.html" id="link">Registro</a></li>
-        <li class="list-group-item"><a href="index.html">Entradas</a></li>
-        <li class="list-group-item">Añadir nueva entrada</li>
-      </ul>
-    </div>
-      <div class="col"><p class="Direccion" aria-label="Etiquetas">#Deporte#Running#Atletismo#Torneos<br>#Competición#Correr#Ejercicio</p></div>
-      <div class="col"><img class="img-fluid" src="Resources/Images/cc-by-nc-nd--300x104.png" alt="Derechos de autor"></div>
-    </footer>
+      <!--Inicio del footer-->   
+      <footer class="col-12" id="Pie" aria-label="Pie de página">
+        <div class="col"><p class="Direccion" aria-label="Direccion" role="note"> Nuestra sede física se encuentra en:</p><br><p class="Direccion">C/ Sanatorio de Fuego Nº23</p></div>
+        <div class="col">
+          <ul class="list-group" aria-label="Puntos de interés">
+          <li class="list-group-item"><a class="btn navbar-brand" href="#" data-bs-toggle="modal"
+            data-bs-target="#ModalYouKnow">Login</a></li>
+          <li class="list-group-item"><a href="Register.html" id="link">Registro</a></li>
+          <li class="list-group-item"><a href="index.html">Entradas</a></li>
+          <li class="list-group-item">Añadir nueva entrada</li>
+        </ul>
+      </div>
+        <div class="col"><p class="Direccion" aria-label="Etiquetas" role="note">#Deporte#Running#Atletismo#Torneos<br>#Competición#Correr#Ejercicio</p></div>
+        <div class="col"><img class="img-fluid" src="Resources/Images/cc-by-nc-nd--300x104.png" alt="Derechos de autor"></div>
+      </footer>
 <!--Fin del footer-->
 
 
