--- a/Register.html
+++ b/Register.html
@@ -49,7 +49,7 @@
              >
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="#">Entradas</a>
+             <a class="nav-link" href="index.html">Entradas</a>
            </li>
            <li class="nav-item">
              <a class="nav-link" href="#"
