--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
-
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script defer src="switch.js"></script>
   </head>
   <body>
     <div id="Padre" class="col-12">
@@ -318,10 +318,8 @@
           btn.className = "noVideo";
           h2.className = "noVideo";
       }
-      
-  </script>
 
-<script src="switch.js"></script>
+  </script>
 
   </body>
 </html>
